// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default values from mixins UU5.Forms.GroupMixin 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes docKit example UU5.Forms.Checkboxes should render as type 1 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    colorSchema={null}
    content="What kind of pets do you like?"
    dynamic={false}
    for="uuID-input"
    id={null}
    ignoreInnerHTML={false}
    language={null}
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    required={false}
    style={null}
    tooltip={null}
    tooltipIcon="mdi-information-outline"
    width={null}
  />
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  >
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="0"
      label="Dogs"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="dogs"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={1}
      value={true}
    />
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="1"
      label="Cats"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="cats"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={1}
      value={false}
    />
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="2"
      label="Yaks"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="yaks"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={1}
      value={false}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Checkboxes docKit example UU5.Forms.Checkboxes should render as type 2 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    colorSchema={null}
    content="What kind of pets do you like?"
    dynamic={false}
    for="uuID-input"
    id={null}
    ignoreInnerHTML={false}
    language={null}
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    required={false}
    style={null}
    tooltip={null}
    tooltipIcon="mdi-information-outline"
    width={null}
  />
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  >
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="0"
      label="Dogs"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="dogs"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={2}
      value={true}
    />
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="1"
      label="Cats"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="cats"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={2}
      value={false}
    />
    <Checkbox
      _radio={false}
      bgStyleChecked="outline"
      className="uu5-forms-input-inner"
      colorSchema={null}
      controlled={true}
      disabled={false}
      feedback="initial"
      hidden={false}
      id={null}
      inputAttrs={null}
      inputColWidth={
        Object {
          "l": 7,
          "m": 7,
          "s": 7,
          "xl": 7,
          "xs": 12,
        }
      }
      inputWidth={null}
      key="2"
      label="Yaks"
      labelColWidth={
        Object {
          "l": 5,
          "m": 5,
          "s": 5,
          "xl": 5,
          "xs": 12,
        }
      }
      labelPosition="right"
      labelWidth={null}
      mainAttrs={null}
      message={null}
      name="yaks"
      noIndex={false}
      offIcon=""
      onChange={[Function]}
      onIcon="mdi-check"
      onValidate={null}
      pureRender={false}
      readOnly={false}
      ref_={null}
      selected={false}
      size="s"
      spacing={null}
      style={null}
      tooltip={null}
      tooltipIcon="mdi-information-outline"
      type={2}
      value={false}
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-filled uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-filled uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props bgStyleChecked 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props className 1`] = `
<div
  className="uu5-forms-checkboxes my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props controlled 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props default props 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={true}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props disabled 4`] = `
<div
  className="uu5-forms-checkboxes uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={true}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="success"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="success"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="warning"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 5`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="warning"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 6`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="error"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 7`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="error"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 8`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="loading"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 9`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="loading"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props feedback 10`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="error"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChange() 1`] = `
<Checkboxes
  bgStyleChecked="outline"
  className={null}
  colWidth={null}
  colorSchema="default"
  controlled={true}
  disabled={false}
  feedback="initial"
  hidden={false}
  id="checkID"
  inline={false}
  inputAttrs={null}
  inputColWidth={
    Object {
      "l": 7,
      "m": 7,
      "s": 7,
      "xl": 7,
      "xs": 12,
    }
  }
  inputWidth={null}
  label={null}
  labelColWidth={
    Object {
      "l": 5,
      "m": 5,
      "s": 5,
      "xl": 5,
      "xs": 12,
    }
  }
  labelPosition="right"
  labelWidth={null}
  mainAttrs={null}
  message={null}
  name={null}
  noIndex={false}
  offIcon=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onIcon=""
  onValidate={[Function]}
  pureRender={false}
  readOnly={false}
  ref_={null}
  required={false}
  requiredMessage={null}
  selected={false}
  selectionBackground={true}
  size="m"
  spacing={null}
  style={null}
  tooltip={null}
  tooltipIcon="mdi-information-outline"
  type={1}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChange() 2`] = `
<Checkboxes
  bgStyleChecked="outline"
  className={null}
  colWidth={null}
  colorSchema="default"
  controlled={true}
  disabled={false}
  feedback="initial"
  hidden={false}
  id="checkID"
  inline={false}
  inputAttrs={null}
  inputColWidth={
    Object {
      "l": 7,
      "m": 7,
      "s": 7,
      "xl": 7,
      "xs": 12,
    }
  }
  inputWidth={null}
  label={null}
  labelColWidth={
    Object {
      "l": 5,
      "m": 5,
      "s": 5,
      "xl": 5,
      "xs": 12,
    }
  }
  labelPosition="right"
  labelWidth={null}
  mainAttrs={null}
  message={null}
  name={null}
  noIndex={false}
  offIcon=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onIcon=""
  onValidate={[Function]}
  pureRender={false}
  readOnly={false}
  ref_={null}
  required={false}
  requiredMessage={null}
  selected={false}
  selectionBackground={true}
  size="m"
  spacing={null}
  style={null}
  tooltip={null}
  tooltipIcon="mdi-information-outline"
  type={1}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChangeFeedback() 1`] = `
<Checkboxes
  bgStyleChecked="outline"
  className={null}
  colWidth={null}
  colorSchema="default"
  controlled={true}
  disabled={false}
  feedback="initial"
  hidden={false}
  id="checkID"
  inline={false}
  inputAttrs={null}
  inputColWidth={
    Object {
      "l": 7,
      "m": 7,
      "s": 7,
      "xl": 7,
      "xs": 12,
    }
  }
  inputWidth={null}
  label={null}
  labelColWidth={
    Object {
      "l": 5,
      "m": 5,
      "s": 5,
      "xl": 5,
      "xs": 12,
    }
  }
  labelPosition="right"
  labelWidth={null}
  mainAttrs={null}
  message={null}
  name={null}
  noIndex={false}
  offIcon=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onIcon=""
  onValidate={[Function]}
  pureRender={false}
  readOnly={false}
  ref_={null}
  required={false}
  requiredMessage={null}
  selected={false}
  selectionBackground={true}
  size="m"
  spacing={null}
  style={null}
  tooltip={null}
  tooltipIcon="mdi-information-outline"
  type={1}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onChangeFeedback() 2`] = `
<Checkboxes
  bgStyleChecked="outline"
  className={null}
  colWidth={null}
  colorSchema="default"
  controlled={true}
  disabled={false}
  feedback="initial"
  hidden={false}
  id="checkID"
  inline={false}
  inputAttrs={null}
  inputColWidth={
    Object {
      "l": 7,
      "m": 7,
      "s": 7,
      "xl": 7,
      "xs": 12,
    }
  }
  inputWidth={null}
  label={null}
  labelColWidth={
    Object {
      "l": 5,
      "m": 5,
      "s": 5,
      "xl": 5,
      "xs": 12,
    }
  }
  labelPosition="right"
  labelWidth={null}
  mainAttrs={null}
  message={null}
  name={null}
  noIndex={false}
  offIcon=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onIcon=""
  onValidate={[Function]}
  pureRender={false}
  readOnly={false}
  ref_={null}
  required={false}
  requiredMessage={null}
  selected={false}
  selectionBackground={true}
  size="m"
  spacing={null}
  style={null}
  tooltip={null}
  tooltipIcon="mdi-information-outline"
  type={1}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props function -> Forms.InputMixin onValidate() 1`] = `
<Checkboxes
  bgStyleChecked="outline"
  className={null}
  colWidth={null}
  colorSchema="default"
  controlled={true}
  disabled={false}
  feedback="initial"
  hidden={false}
  id="checkID"
  inline={false}
  inputAttrs={null}
  inputColWidth={
    Object {
      "l": 7,
      "m": 7,
      "s": 7,
      "xl": 7,
      "xs": 12,
    }
  }
  inputWidth={null}
  label={null}
  labelColWidth={
    Object {
      "l": 5,
      "m": 5,
      "s": 5,
      "xl": 5,
      "xs": 12,
    }
  }
  labelPosition="right"
  labelWidth={null}
  mainAttrs={null}
  message={null}
  name={null}
  noIndex={false}
  offIcon=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onIcon=""
  onValidate={[Function]}
  pureRender={false}
  readOnly={false}
  ref_={null}
  required={false}
  requiredMessage={null}
  selected={false}
  selectionBackground={true}
  size="m"
  spacing={null}
  style={null}
  tooltip={null}
  tooltipIcon="mdi-information-outline"
  type={1}
  value={
    Array [
      Object {
        "label": "Checkbox 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Checkboxes props hidden 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props hidden 4`] = `
<div
  className="uu5-forms-checkboxes uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props icon 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props id 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-inputs-inline uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inline 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-inputs-inline uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputAttrs 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props inputColWidth 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props label 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    colorSchema={null}
    content="Your personal email"
    dynamic={false}
    for="uuID-input"
    id={null}
    ignoreInnerHTML={false}
    language={null}
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    required={false}
    style={null}
    tooltip={null}
    tooltipIcon="mdi-information-outline"
    width={null}
  />
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelColWidth 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props labelPosition 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props mainAttrs 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props message 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message="Your password is too short!"
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props name 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex 1`] = `
<div
  className="uu5-forms-checkboxes uu5-noindex uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props noIndex 4`] = `
<div
  className="uu5-forms-checkboxes uu5-noindex uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props offIcon 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props onIcon 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props pureRender 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={true}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props readOnly 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={true}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={true}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props required 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={true}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props requiredMessage 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected 1`] = `
<div
  className="uu5-forms-checkboxes uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selected 4`] = `
<div
  className="uu5-forms-checkboxes uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props selectionBackground 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 5`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props size 6`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props style 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props tooltip 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type 2`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type 3`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props type 4`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Forms.Checkboxes props value 1`] = `
<div
  className="uu5-forms-checkboxes uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-checkboxes-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    buttons={null}
    className={null}
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    daterangepicker={false}
    datetimepicker={false}
    disabled={false}
    feedback="initial"
    id={null}
    mainAttrs={null}
    message={null}
    name={null}
    noIndex={false}
    pureRender={false}
    readonly={false}
    ref_={null}
    required={false}
    slider={false}
    style={null}
    tooltip={null}
  />
</div>
`;
